manifests/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    owner: rtaylor
  name: resource-autoscaler

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller
  namespace: resource-autoscaler
  labels:
    app: resource-autoscaler-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-autoscaler-controller
  template:
    metadata:
      labels:
        app: resource-autoscaler-controller
    spec:
      serviceAccountName: autoscaler
      containers:
        - name: controller
          image: starlord.inscloudgate.net/rtaylor/resource-autoscaler:alpha
          resources:
            limits:
              cpu: 100m
              memory: 32Mi
            requests:
              cpu: 100m
              memory: 32Mi
          volumeMounts:
            - name: config
              mountPath: "/config"
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: resource-scaler-config

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-traffic
  namespace: resource-autoscaler
spec:
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
  podSelector: {}
